--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "url": "git+https://github.com/bloominstituteoftechnology/node-testing2-project.git"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "knex": "^0.95.14",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.4.1",
     "jest": "^27.4.5",
